--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,7 +11,8 @@
         AllowsTransparency="True"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
-        MouseDown="Window_MouseDown">
+        MouseDown="Window_MouseDown"
+        Icon="assets/icone-proauto.ico">
     <Border CornerRadius="12">
         <Border CornerRadius="10"                    
                 BorderThickness="2"
@@ -126,6 +127,10 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="320"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
                     <StackPanel Grid.Row="1"
                                 Orientation="Vertical"
